--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,10 @@
   height: 100vh;
 }
 
+.banner {
+  margin-top: 0;
+}
+
 .main {
   padding: 5rem 0;
   flex: 1;
@@ -34,7 +38,7 @@
 }
 
 .title a {
-  color: #0070f3;
+  color: #e85d04;
   text-decoration: none;
 }
 
@@ -93,8 +97,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #e85d04;
+  border-color: #e85d04;
 }
 
 .card h2 {
@@ -118,4 +122,8 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.displaytitle {
+  font-size: 0.1rem;
 }
