--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,10 +7,62 @@ body {
 }
 
 a {
-  color: inherit;
+  color:inherit;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.content{
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+
+nav{
+  margin: 10px auto 0px;
+  padding: 10px 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-color: #042D42  ;
+  color: white;
+  font-family: serif ;
+  
+}
+
+nav a {
+  margin-left: 12px;
+}
+
+nav a:hover,
+nav a:focus,
+nav a:active {
+  color: #FFB703;
+}
+
+
+nav .logo{
+  margin-right: auto;
+}
+
+nav .logotag{
+  margin-right: auto;
+  font-size:30px;
+  font-family: serif;
+  float:inline-end;
+  vertical-align: top;
+}
+
+footer{
+  display:block;
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 60px;
+  color: #777;
+  border-top: 1px solid #eaeaea;
+  
+
 }
